[gd_scene load_steps=9 format=2]

[ext_resource path="res://ninepatch.png" type="Texture" id=1]
[ext_resource path="res://hud_theme.tres" type="Theme" id=2]
[ext_resource path="res://cycle/hud/wallet_hud.gd" type="Script" id=3]
[ext_resource path="res://cycle/hud/currency_label.gd" type="Script" id=4]
[ext_resource path="res://font_big.tres" type="DynamicFont" id=5]
[ext_resource path="res://cycle/stations/order_station/cantaffordit.wav" type="AudioStream" id=6]
[ext_resource path="res://cycle/kaching.wav" type="AudioStream" id=7]
[ext_resource path="res://cycle/hourglass_fanfare.wav" type="AudioStream" id=8]

[node name="wallet_hud" type="MarginContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -90.0
margin_bottom = 40.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nine_patch_rect" type="NinePatchRect" parent="."]
margin_right = 90.0
margin_bottom = 40.0
texture = ExtResource( 1 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="margin_container" type="MarginContainer" parent="."]
margin_right = 90.0
margin_bottom = 40.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="v_box_container" type="VBoxContainer" parent="margin_container"]
margin_left = 3.0
margin_top = 3.0
margin_right = 87.0
margin_bottom = 37.0
custom_constants/separation = -6

[node name="label" type="Label" parent="margin_container/v_box_container"]
margin_right = 84.0
margin_bottom = 13.0
text = "Currency"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="currency_label" type="Label" parent="margin_container/v_box_container"]
margin_top = 7.0
margin_right = 84.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 5 )
text = "00$"
align = 1
script = ExtResource( 4 )

[node name="shake_duration" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="cant_afford_it_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -3.0
bus = "Fanfares"

[node name="bought_item" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -3.0
pitch_scale = 0.5
bus = "Fanfares"

[node name="bought_item2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -3.0
bus = "Fanfares"
